--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Feature Counter</title>
+	<title>Image Feature Counter</title>
 
   <link href="/application.css" media="all" rel="stylesheet" type="text/css" />
 
